# nba_api

./: .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  CHANGELOG.MD  CONTRIBUTING.md  LICENSE  Makefile  README.md  REFACTORING.md  RELEASE_TESTING.md  noxfile.py  pyproject.toml  requirements.txt  setup.py
.circleci/: config.yml
.devcontainer/: Dockerfile  devcontainer.json  post-create-command.sh  postCreateCommand.sh
.github/: CODEOWNERS  dependabot.yml
.github/ISSUE_TEMPLATE/: bug.yml
analysis_archive/stats/: 2018-09-16.json  analysis.json
docs/: endpoint_analysis_format.md  index.md  package_structure.md  scripts.md  table_of_contents.md  version_log.md
docs/examples/: Basics.ipynb  Finding Games.ipynb  LiveData.ipynb  PlayByPlay.ipynb  PlayByPlay_Live.ipynb
docs/examples/Home Team Win-Loss Modeling/: Home Team Win-Loss Data Prep.ipynb  Home Team Win-Loss Modeling.ipynb
docs/nba_api/: debug.md
docs/nba_api/live/endpoints/: boxscore.md  odds.md  playbyplay.md  scoreboard.md
docs/nba_api/stats/: endpoint template.md  endpoints_data_structure.md  examples.md
docs/nba_api/stats/endpoints/: alltimeleadersgrids.md  assistleaders.md  assisttracker.md  boxscoreadvancedv2.md  boxscoreadvancedv3.md  boxscoredefensive.md  boxscoredefensivev2.md  boxscorefourfactorsv2.md  boxscorefourfactorsv3.md  boxscorehustle.md  boxscorehustlev2.md  boxscorematchups.md  boxscorematchupsv3.md  boxscoremiscv2.md  boxscoremiscv3.md  boxscoreplayertrackv2.md  boxscoreplayertrackv3.md  boxscorescoringv2.md  boxscorescoringv3.md  boxscoresimilarityscore.md  boxscoresummaryv2.md  boxscoresummaryv3.md  boxscoretraditionalv2.md  boxscoretraditionalv3.md  boxscoreusagev2.md  boxscoreusagev3.md  commonallplayers.md  commonplayerinfo.md  commonplayoffseries.md  commonteamroster.md  commonteamyears.md  cumestatsplayer.md  cumestatsplayergames.md  cumestatsteam.md  cumestatsteamgames.md  defensehub.md  draftboard.md  draftcombinedrillresults.md  draftcombinenonstationaryshooting.md  draftcombineplayeranthro.md  (+113 more)
docs/nba_api/stats/endpoints_output/: alltimeleadersgrids_output.md  assistleaders_output.md  assisttracker_output.md  boxscoreadvancedv2_output.md  boxscoreadvancedv3_output.md  boxscoredefensivev2_output.md  (+116 more)
docs/version_log/: 1.0.0.md  1.0.1.md  1.0.2.md
endpoint_analysis/: analysis.json
endpoint_documentation/: playerindex.md
endpoint_files/: playerindex.py
examples/: Basics.ipynb  Finding Games.ipynb
nba_api/live/endpoints/: __init__.py  _base.py  boxscore.py  gameodds.py  playbyplay.py  scoreboard.py
nba_api/nba_cli/: nba_cli.py
nba_api/stats/endpoints/: __init__.py  _base.py  alltimeleadersgrids.py  boxscoreadvancedv2.py  boxscoredefensive.py  boxscorefourfactorsv2.py  boxscorematchups.py  boxscoremiscv2.py  boxscoreplayertrackv2.py  boxscorescoringv2.py  boxscoresimilarityscore.py  boxscoresummaryv2.py  boxscoretraditionalv2.py  boxscoreusagev2.py  commonallplayers.py  commonplayerinfo.py  commonplayoffseries.py  commonteamroster.py  commonteamyears.py  cumestatsplayer.py  cumestatsteam.py  defensehub.py  draftboard.py  draftcombinedrillresults.py  draftcombinenonstationaryshooting.py  draftcombineplayeranthro.py  draftcombinespotshooting.py  draftcombinestats.py  drafthistory.py  franchisehistory.py  homepageleaders.py  homepagev2.py  infographicfanduelplayer.py  leaderstiles.py  leaguedashlineups.py  leaguedashplayerbiostats.py  leaguedashplayerclutch.py  leaguedashplayerptshot.py  leaguedashplayershotlocations.py  leaguedashplayerstats.py  (+76 more)
nba_api/stats/static/: __init__.py  players.py  teams.py
nba_api_django/: manage.py
nba_api_django/nba_api_django/: asgi.py  settings.py  urls.py  wsgi.py
parameter_documentation/: parameters.md
scripts/: analyze_endpoints_and_create_files.py  create_static_data_file.py  gen-release.sh
scripts/static_players_update/: generate_static_data_file.py  template.py
src/nba_api/: __init__.py
src/nba_api/live/: http.py
tests/: __init__.py  test_static_cli.py
tests/integration/: __init__.py  conftest.py  deferred_endpoints.py  helpers.py  test_endpoints.py  test_stats_endpoints_responses_valid.py  test_stats_library_playbyplayregex.py
tests/integration/catalogs/: constants.py  endpoint_specs.py  models.py
tests/integration/data/: README.md  __init__.py  leaguedashteamstats.py  leaguegamefinder.py  playerdashptshotdefend.py  scoreboardv3.py  teamdashlineups.py  teamgamelog.py  teamgamelogs.py
tests/integration/helpers/: constants.py  endpoint_specs.py  models.py
tests/integration/scenarios/: test_endpoints.py
tests/integration/smoke/: test_stats_endpoints_responses_valid.py
tests/live/endpoints/: test_boxscore.py  test_playbyplay.py  test_scoreboard.py
tests/stats/: deferred_endpoints.py  test_endpoint_responses_valid.py  test_endpoints.py
tests/tools/: .coveragerc  data.py  test_analysis.py  test_endpoint_integration.py  test_nba_response_regex.py  test_parameter_analyzer.py
tests/unit/: data_playbyplayregex.py  test_eventmsgtype.py  test_http.py  test_integration_endpoint_spec.py  test_leaguedashplayerclutch.py  test_live_boxscore.py  test_live_boxscore_wnba.py  test_live_odds.py  test_live_playbyplay.py  test_live_scoreboard.py  test_parameters.py  test_playbyplayregex.py  test_players.py  test_static_data.py  test_stats_endpoints_base.py  test_stats_library_nbastatsresponse.py  test_version.py
tests/unit/http/: test_legacy_debug_usage.py
tests/unit/package/: test_version.py
tools/stats/endpoint_analysis/: analysis.py  data.py  nba_http.py  parameter_analyzer.py  pattern_analyzer.py
tools/stats/endpoint_documentation_generator/: generator.py  template.py
tools/stats/endpoint_py_file_generator/: generator.py  template.py
tools/stats/parameter_documentation_generator/: generator.py  template.py
tools/stats/static_players_update/: template.py  update.py
vnba_api/: pyvenv.cfg
vnba_api/Scripts/: activate  activate.bat
vnba_api/mynba_api/: manage.py
vnba_api/mynba_api/mynba_api/: asgi.py  settings.py  urls.py  views.py  wsgi.py
vnba_api/mynba_api/nba/: apps.py  views.py
(+421 files in other folders)
