[project]
name = "nba_api"
version = "1.11.4"
description = "An API Client package to access the APIs for NBA.com"
requires-python = ">=3.10"
license = "MIT"
authors = [ {name = "Swar Patel", email = "<swar.m.patel@gmail.com>"}]
maintainers = [
    {name = "Swar Patel", email = "<swar.m.patel@gmail.com>"},
]
keywords = [
    "api", 
    "basketball", 
    "data", 
    "nba", 
    "sports", 
    "stats"
]
classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Software Development",
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "numpy >=1.26.0 ; python_version < '3.13'",
    "numpy >=2.1.0 ; python_version >= '3.13'",
    "pandas >=2.1.0; python_version < '3.12'",
    "pandas >=2.2.0 ; python_version >= '3.12'",
    "requests (>=2.32.3,<3.0.0)"
]

readme = "README.md"

[project.urls]
    repository = "https://github.com/swar/nba_api"
    "Bug Tracker" = "https://github.com/swar/nba_api/issues"
    documentation = "https://github.com/swar/nba_api/blob/master/README.md"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-cov = "^4.0"
python-semantic-release = "^9.0.0"
pandas = [
    {version = ">=2.2.0", python = ">=3.12"},
    {version = "<2.2.0", python = "<3.12"}
]
ruff = "^0.15.2"
pre-commit = "^4.0.0"

[tool.pytest.ini_options]
testpaths = "./tests/unit/"

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes (unused imports, undefined names, etc.)
    "I",   # isort (import ordering)
    "UP",  # pyupgrade (modernize syntax for target Python version)
    "B",   # flake8-bugbear (common bugs and design issues)
    "C4",  # flake8-comprehensions (simplify comprehensions)
    "SIM", # flake8-simplify (simplify code patterns)
]
ignore = [
    "E501", # line too long — handled by ruff format
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"] # re-exports are intentional in __init__.py

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
build_command = "poetry build"
dist_path = "dist/"
upload_to_pypi = true
upload_to_release = true
commit_subject = "chore: release v{version}"
commit_message = "chore: release v{version}\n\n{changelog}"
tag_format = "v{version}"
changelog_placeholder = "# NBA API Change Log"

[tool.semantic_release.remote]
type = "github"
token = { env = "GITHUB_TOKEN" }

[tool.semantic_release.branches.master]
match = "(master|main)"
prerelease = false

[tool.semantic_release.branches.release]
match = "(release|release/.*)"
prerelease = false

[tool.semantic_release.branches.test]
match = "test-release"
prerelease = true
prerelease_token = "rc"

[tool.semantic_release.commit_parser_options]
allowed_tags = ["build", "chore", "ci", "docs", "feat", "fix", "perf", "style", "refactor", "test"]
minor_tags = ["feat"]
patch_tags = ["fix", "perf"]

[tool.semantic_release.changelog]
exclude_commit_patterns = [
  "^Bump .*",
  "^Update .*", 
  "^Merge pull request.*"
]
changelog_file = "CHANGELOG.MD"

[tool.semantic_release.changelog.environment]
block_start_string = "{%"
block_end_string = "%}"
variable_start_string = "{{"
variable_end_string = "}}"
comment_start_string = "{#"
comment_end_string = "#}"
trim_blocks = false
lstrip_blocks = false